Add location-bar padding for newer material

Adds 2dp of interior padding for Refresh and 3dp for Touchable variants
which effectively adds a border to newer material layouts. This
insetting ends up with 24x24dp (and fixes 24x26dp) location-bar
page-action icons which fixes the inkdrop size. Prior to this the
24x24dp icons were upscaled to 26dp to match the location-bar interior
height.

The corresponding LOCATION_BAR_ICON_INTERIOR_PADDING value is updated
for Touchable to provide a square location-bar icon, but the existing
value results in a square for the updated interior padding (which is why
this fixes the 24x26dp oval inkshape bug).

By using even LOCATION_BAR_ELEMENT_PADDING this also accidentally fixes
a tangental bug where these icons bob up and down on hover in 150% HiDPI
modes. This has not yet been root caused but is seen as a nice bonus. It
is not fixed for 125%, so won't mark as fixed.

Corresponding screenshots of Touchable and Refresh combinations have
been approved by bettes@.

Bug: chromium:839148, chromium:845200
Change-Id: I68482d16decb5f8102c8cd6317ba3b0c1587e652
Reviewed-on: https://chromium-review.googlesource.com/1070367
Commit-Queue: Peter Boström <pbos@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561233}
Former-commit-id: af504d01b70d3331ab1008517fd3a48cb5fdfa04